# diesel-multi-tenancy

./: .env  Cargo.toml  docker-compose.yml  flake.nix
.direnv/: flake-profile-5-link  flake-profile-6-link
docker-compose/postgres/: Dockerfile
migrations/2024-12-05-134800_init/: down.sql  up.sql
src/: connection.rs  diesel_ext.rs  main.rs
src/db/: models.rs  schema.rs
