[package]
name = "diesel-multi-tenancy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
# diesel = { version = "2.1", features = [
#     "postgres",
#     "r2d2",
#     "serde_json",
#     "chrono",
#     "uuid",
#     "postgres_backend",
# ] }
diesel = { git = "https://github.com/priyansh-bhardwaj-juspay/diesel.git", features = [
    "postgres",
    "r2d2",
    "serde_json",
    "chrono",
    "uuid",
    "postgres_backend",
] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8"
env_logger = "0.10"
log = "0.4"
chrono = { version = "0.4.26", features = ["serde"] }
